Added hiera syntax validate

--- a/.cd4pe.yaml
+++ b/.cd4pe.yaml
@@ -6,7 +6,14 @@ pipelines:
     triggers:
     - "COMMIT"
     stages:
-    - name: "impact"
+    - name: "Code Validation stage"
+      steps:
+      - type: "JOB"
+        name: "control-repo-hiera-syntax-validate"
+        concurrent_compilations: 0
+        all_deployments: false
+      auto_promote: "all_succeeded"
+    - name: "Impact Analysis"
       steps:
       - type: "IMPACT_ANALYSIS"
         deployments:
