--- a/common.yaml
+++ b/common.yaml
@@ -7,12 +7,7 @@ modules::motd::params::content: "Welcome to windows???"
 modules::chocolatey::adobereader::ensure: "latest"
 modules::chocolatey::adobereader::provider: "chocolatey"
 chocolatey::choco_install_location: "c:\\choco\\"
-profile::windows::iis::testi
-ng: "From hiera data repo. wrote doco"
-- -- -
--
--m
-
+profile::windows::iis::testing: "From hiera data repo. syntax check"
 profile::windows::iis::notencrypted: "Update the plaintext hiera data"
 profile::windows::iis::encrypted: "Not really encrypted"
   
