--- a/os/RedHat/7.yaml
+++ b/os/RedHat/7.yaml
@@ -1,12 +1,17 @@
 ---
 cem_linux::benchmark: 'cis'
-cem_linux::merge_behavior: 'deep'
+#cem_linux::merge_behavior: 'deep'
 cem_linux::config:
   profile: 'server'
-  level: '2'
+  level: '1'
+  ignore:
+    - ensure_message_of_the_day_is_configured_properly
   control_configs:
     ensure_time_synchronization_is_in_use:
       timeservers:
         - 'server 1.1.1.1 iburst'
         - 'server 2.2.2.2 iburst'
         - 'server 3.2.2.2 iburst'
+
+
+secure_linux_cis::rules::ensure_permissions_on_etc_motd_are_configured::enforced: false
