--- a/nodes/ip-172-31-12-101.ap-southeast-2.compute.internal.yaml
+++ b/nodes/ip-172-31-12-101.ap-southeast-2.compute.internal.yaml
@@ -1,3 +1,3 @@
 ---
 profile::linux::motd_linux::motdcontent: |
-  Node hiera updated in hiera repo 2nd time
+  Node hiera updated in hiera repo 3rd time
